--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
   </div>
 	<div class="sub-header">
     <a href="{{ .Site.BaseURL }}">
-      <img src="../images/logo-rio.svg" alt="{{ .Site.Title }}">
+      <img src="../images/logo-{{ .Site.Title }}.svg" alt="{{ .Site.Title }}">
     </a>
     
     <!-- nav -->
