--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <a href="https://rancher.com/" target="blank">
       <img src="../images/rancher-logo-horiz-white.svg" height="20" width="136">
     </a>
-    <a href="https://rancher.com/" target="blank">See what else rancher is up to.</a>
+    <a href="https://rancher.com/" target="blank">See what else Rancher is up to.</a>
   </div>
 	<div class="sub-header">
     <a href="{{ .Site.BaseURL }}">
