rm github button

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
         <li><a href="{{ .URL | relURL }}" class="btn no-bg">{{ .Name }}</a></li>
         {{ end }}
         <!-- github  -->
-        <li><a href="https://github.com/rancher/submariner" class="btn"><img src="../images/icon-github.svg"><span>Github</span></a></li>
+        <!-- <li><a href="https://github.com/rancher/submariner" class="btn"><img src="../images/icon-github.svg"><span>Github</span></a></li> -->
       </ul>  
     </nav>
     {{ end }}
