add fork and star counts

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -113,6 +113,15 @@ footer {
   a {
     color: white;
   }
+
+  div {
+    display: flex;
+    align-items: center;
+  
+    > * {
+      margin: 0 5px;
+    }
+  }
 }
 
 .sub-header {
