--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,15 @@
     <a href="https://rancher.com/" target="blank">
       <img src="../images/rancher-logo-horiz-white.svg" height="20" width="136">
     </a>
-    <a href="https://rancher.com/" target="blank">See what else Rancher is up to.</a>
+    <div>
+      <a href="https://rancher.com/" target="blank">See what else Rancher is up to.</a>
+
+      <!-- github stars -->
+      <a class="github-button" href="https://github.com/rancher/{{ .Site.Title }}" data-icon="octicon-star" data-show-count="true" aria-label="Star on GitHub">Star</a>
+      
+      <!-- github button -->
+      <a class="github-button" href="https://github.com/rancher/{{ .Site.Title }}/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork on GitHub">Fork</a>
+    </div>
   </div>
 	<div class="sub-header">
     <a href="{{ .Site.BaseURL }}">
