--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,6 +19,7 @@
 
 	<!-- github buttons -->
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
+	<script type="text/javascript" src="//cdn.bizible.com/scripts/bizible.js" async=""></script>
 </head>
 <body>
 	{{ partial "header" . }}
