--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{{ .Title }}</title>
+	{{ if .Site.Params.gtm_id}}{{- partial "gtm.html" . }}{{ end }}
+
+
 	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
 	
@@ -22,6 +25,12 @@
 	<script type="text/javascript" src="//cdn.bizible.com/scripts/bizible.js" async=""></script>
 </head>
 <body>
+	{{ if .Site.Params.gtm_id}}
+		<noscript>
+			<iframe src="//www.googletagmanager.com/ns.html?id={{ .Site.Params.gtm_id }}" height="0" width="0" style="display:none;visibility:hidden">
+			</iframe>
+		</noscript>
+	{{ end }}
 	{{ partial "header" . }}
 	{{ block "main" . }}{{ end }}
 	{{ partial "footer" . }}
