add directory link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,4 +2,7 @@
 	<p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
 	<!-- <div class="project-icons">
 	</div> -->
+	<div>
+		<a href="https://suse-projects.github.io/" target="_blank">Suse Projects Directory</a>
+	</div>
 </footer>
